get ready for mac

--- a/Personal Portfolio Website/flexboxBusiness.html
+++ b/Personal Portfolio Website/flexboxBusiness.html
@@ -16,7 +16,7 @@
         <br>
         <p>This is a Codecademy project for which I was prompted to create a homepage for any business using flexbox.</p>
         <br>
-        <p>For this project I decided to create a spa website using stock images and a unique menu of services and products. I have included an image of my project below but you can also visit the website at the link <a href="https://sidneyrussell0.github.io/Flexbox-Business-Proj-/">here</a>.</p>
+        <p>For this project I decided to create a spa website using stock images and a unique menu of services and products. I have included an image of my project below but you can also visit the website at the link <a class="link" href="https://sidneyrussell0.github.io/Flexbox-Business-Proj-/">here</a>.</p>
         <br>
         <img src="Resources/Flexbox.jpeg" alt="Screenshot of Flexbox Business">
     </body>
