--- a/Personal Portfolio Website/theTeaCozy.html
+++ b/Personal Portfolio Website/theTeaCozy.html
@@ -16,7 +16,7 @@
         <br>
         <p>The prompt for this Codecademy project was to create a fictional tea shop website using the design specs and image assets given to me.</p>
         <br>
-        <p>I have included an image of my project below but you can also visit the website at the link <a href="https://sidneyrussell0.github.io/The_Tea_Cozy_Project/">here</a>.</p>
+        <p>I have included an image of my project below but you can also visit the website at the link <a class="link" href="https://sidneyrussell0.github.io/The_Tea_Cozy_Project/">here</a>.</p>
         <img src="Resources/TeaCozy.jpeg" alt="Screenshot of The Tea Cozy">
     </body>
     <footer>
